feat: connection pool with idle eviction, rate limiting, and security hardening
Replace HikariCP with SQLiteDataSource-based pool manager. Add idle-eviction
scheduler, pool properties (maxDatabases, idleTimeout, evictionInterval),
PoolFullException with HTTP 503 response, and session recovery tracking.

Add sliding-window rate limiter, ATTACH/PRAGMA blocking, SQL comment stripping,
dbName validation, and Authorization header sanitization in AI error logs.

Bump max databases to 200 and idle timeout to 5 minutes.